--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel-frontend-presets/material-dashboard": "^2.0",
         "laravel/framework": "^10.0",
+        "laravel/jetstream": "*",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "livewire/livewire": "^2.11",
         "santigarcor/laratrust": "^8.2"
     },
     "require-dev": {
